--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,11 +1,9 @@
-format_version: 1.1.0
-default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
+format_version: 1.0
+default_step_lib_source: https://github.com/scruffyfox/steps-amazon-s3-uploader.git
 
 app:
   envs:
   # define these in your .bitrise.secrets.yml
-  - BITRISE_IPA_PATH: $BITRISE_IPA_PATH
-  - BITRISE_DSYM_PATH: $BITRISE_DSYM_PATH
   - BITRISE_APP_SLUG: $BITRISE_APP_SLUG
   - BITRISE_BUILD_SLUG: $BITRISE_BUILD_SLUG
 
@@ -23,15 +21,14 @@ workflows:
     steps:
     - path::./:
         inputs:
-        - ipa_path: "$BITRISE_IPA_PATH"
-        - dsym_path: "$BITRISE_DSYM_PATH"
+        - file_path: "$UPLOADER_FILE_PATH"
         - app_slug: "$BITRISE_APP_SLUG"
         - build_slug: "$BITRISE_BUILD_SLUG"
 
         - aws_access_key: $AWS_ACCESS_KEY
         - aws_secret_key: $AWS_SECRET_KEY
         - bucket_name: $BUCKET_NAME
-        # - bucket_region: $BUCKET_REGION
+        - bucket_region: $BUCKET_REGION
         # - path_in_bucket: $PATH_IN_BUCKET
         # - file_access_level: "private"
         # - file_access_level: "public_read"
@@ -39,11 +36,8 @@ workflows:
         inputs:
         - content: |-
             #!/bin/bash
-            echo "S3_DEPLOY_STEP_URL_IPA: ${S3_DEPLOY_STEP_URL_IPA}"
-            echo "S3_DEPLOY_STEP_URL_DSYM: ${S3_DEPLOY_STEP_URL_DSYM}"
-            echo "S3_DEPLOY_STEP_URL_PLIST: ${S3_DEPLOY_STEP_URL_PLIST}"
-            echo "S3_DEPLOY_STEP_STATUS: ${S3_DEPLOY_STEP_STATUS}"
-            echo "S3_DEPLOY_STEP_EMAIL_READY_URL: ${S3_DEPLOY_STEP_EMAIL_READY_URL}"
+            echo "S3_UPLOAD_STEP_URL: ${S3_UPLOAD_STEP_URL}"
+            echo "S3_UPLOAD_STEP_STATUS: ${S3_UPLOAD_STEP_STATUS}"
 
 
   # ----------------------------------------------------------------
@@ -64,7 +58,7 @@ workflows:
   # --- workflow to Release version
   create-release-version:
     envs:
-    - RELEASE_VERSION: 3.5.0
+    - RELEASE_VERSION: 1.0
     steps:
     - script:
         title:
@@ -82,9 +76,9 @@ workflows:
   share-this-step:
     envs:
       - MY_STEPLIB_REPO_FORK_GIT_URL:
-      - STEP_ID_IN_STEPLIB: amazon-s3-deploy
-      - STEP_GIT_VERION_TAG_TO_SHARE: 3.5.0
-      - STEP_GIT_CLONE_URL: https://github.com/bitrise-io/steps-amazon-s3-deploy
+      - STEP_ID_IN_STEPLIB: amazon-s3-uploader
+      - STEP_GIT_VERION_TAG_TO_SHARE: 1.0
+      - STEP_GIT_CLONE_URL: https://github.com/scruffyfox/steps-amazon-s3-uploader
     description: |-
       If this is the first time you try to share a Step you should
       first call: $ bitrise share
