--- a/step.yml
+++ b/step.yml
@@ -20,6 +20,10 @@ is_skippable: false
 deps:
   brew:
   - name: awscli
+    bin_name: aws
+  apt_get:
+  - name: awscli
+    bin_name: aws
 run_if: ""
 inputs:
   - file_path: ""
